RESOLVED FIXED9609
REGRESSION: Missing image icon needs to be moved back to WebKit
https://bugs.webkit.org/show_bug.cgi?id=9609
Summary REGRESSION: Missing image icon needs to be moved back to WebKit
Adele Peterson
Reported 2006-06-26 11:28:15 PDT
Missing image icon needs to be moved back to WebKit We moved this down to WebCore thinking that it was only used in WebCore, but that's not true. WebHTMLView.m:1391 still tries to load it.
Attachments
Patch v1 (3.38 KB, patch)
2007-03-09 16:49 PST, David Kilzer (:ddkilzer)
darin: review+
Darin Adler
Comment 1 2006-06-27 10:19:13 PDT
We can: 1) change WebKit to load the one in WebCore, or 2) move the WebCore one back into WebKit, or 3) have two copies, or 4) move the code in WebKit that uses the missing image into WebCore.
Alice Liu
Comment 2 2006-07-05 09:41:04 PDT
Maciej Stachowiak
Comment 3 2007-02-07 03:39:12 PST
Does this have a real symptom?
David Kilzer (:ddkilzer)
Comment 4 2007-03-09 16:49:43 PST
Created attachment 13570 [details] Patch v1 Proposed patch implementing item 4 in Comment #1. Compiles. I wasn't sure how to test this since the method is a bit too complex (IMO) for an ObjC test, although I didn't actually try that option yet. I also thought about creating a new method that simply returns the missing image (so that loadPlatformResource() isn't exported), but I'm not sure if that's a concern or not.
Darin Adler
Comment 5 2007-03-10 09:10:10 PST
Comment on attachment 13570 [details] Patch v1 r=me
David Kilzer (:ddkilzer)
Comment 6 2007-03-10 14:52:23 PST
Committed revision 20097.
Note You need to log in before you can comment on or make changes to this bug.